--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "prettier": "3.4.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
